# woven

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
config/: woven.toml
docs/roadmaps/: initial.md  qol.md
src/: app.rs  config.rs  kernel.rs  lib.rs  logging.rs  main.rs
tests/: kernel_eval.rs
